# swnumeric

./: CMakeLists.txt  LICENSE  README.md
Applications/NumericalIntegration/: GaussLegendre.hpp
Applications/NumericalIntegration/tests/: testGaussLegendre.cpp
Applications/ODEIntegration/: OdeDynamics.hpp  RungeKutta45.hpp
Applications/ODEIntegration/tests/: harmonic_oscillator.cpp
Libraries/: CMakeLists.txt
Libraries/DataStructs/: SortableVector.hpp
Libraries/Geometry/: Circle.hpp  Curve.hpp  Edge.hpp  Intersection.hpp  Triangle.hpp
Libraries/IO/: MatrixMarketIO.hpp  mmio.hpp
Libraries/Mesh/: Triangulation.hpp
Libraries/Tensor/: CMakeLists.txt  MatrixVector.hpp  Tensor.hpp  TensorMath.hpp
Libraries/Tensor/tests/: testMatrix.cpp  testTensor.cpp  testVector.cpp
